--- a/waxom/css/style.css
+++ b/waxom/css/style.css
@@ -245,10 +245,9 @@ header {
 .owl-nav {
 	position: absolute;
     top: 145px;
-    width: 1540px;
+    width: 100%;
 	height: 130px;
 	overflow: hidden;
-    left: -185px;
     display: flex;
     justify-content: space-between;
 }
